--- a/main.scss
+++ b/main.scss
@@ -9,72 +9,82 @@ main {
 }
 
 .transforming {
-    transition-duration: .5s;
+    transition-duration: 0.5s;
 }
 
 .container .chess-board {
     /* background: #000; */
     height: 50vw;
     width: 50vw;
-}
 
-.container .chess-board .fields-container {
+  .fields-container {
     width: 100%;
     height: 100%;
-}
+  }
 
-.container .chess-board table .figure-field {
+  table .figure-field {
     /* width: calc(100% / 8 - 2px);
     height: calc(100% / 8 - 2px); */
+  }
+
+.fields-container {
+
+    .chess-row {
+        height: 12.5%;
+        width: 100%;
+        display: flex;
+    }
+
+    .figure-field {
+        width: 12.5%;
+        height: 100%;
+        display: flex;
+    .chess-figure {
+        width: 100%;
+        margin: auto;
+        height: 100%;
+        box-sizing: border-box;
+
+        img {
+            cursor: pointer;
+            padding: 15%;
+            max-width: 70%;
+        }
+
+        &.active {
+            border: 4px solid #4f9d56;
+        }
+
+        &[data-color="black"] img {
+            filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.5));
+        }
+
+        &[data-color="white"] img {
+            filter: invert(100%) drop-shadow(0 0 4px rgba(0, 0, 0, 0.5));
+        }
+
+      }
+    }
+    .chess-row {
+
+      &:nth-child(even) .figure-field:nth-child(even) {
+            background: #624a2e;
+      }
+      
+      &:nth-child(odd) .figure-field {
+          
+        &:nth-child(odd) {
+            background: #624a2e;
+        }
+
+        &:nth-child(even) {
+            background: #ffeaa4;
+        }
+      }
+
+      &:nth-child(even) .figure-field:nth-child(odd) {
+            background: #ffeaa4;
+      }
+    }
+  }
 }
-
-.container .chess-board .fields-container .chess-row {
-    height: 12.5%;
-    width: 100%;
-    display: flex;
-
-}
-
-.container .chess-board .fields-container .figure-field {
-    width: 12.5%;
-    height: 100%;
-    display: flex;
-}
-
-.container .chess-board .fields-container .figure-field .chess-figure {
-    width: 100%;
-    margin: auto;
-    height: 100%;
-    box-sizing: border-box;
-}
-
-.container .chess-board .fields-container .figure-field .chess-figure img {
-    cursor: pointer;
-    padding: 15%;
-    max-width: 70%;
-}
-
-.container .chess-board .fields-container .figure-field .chess-figure.active {
-    border: 4px solid #4f9d56;
-}
-
-/* .container .chess-board .fields-container .figure-field .chess-figure.active img {
-    filter: drop-shadow(0 0 4px red) !important;
-} */
-
-.container .chess-board .fields-container .figure-field .chess-figure[data-color="black"] img {
-    filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.5));
-}
-
-.container .chess-board .fields-container .figure-field .chess-figure[data-color="white"] img {
-    filter: invert(100%) drop-shadow(0 0 4px rgba(0, 0, 0, 0.5));
-}
-
-.container .chess-board .fields-container .chess-row:nth-child(even) .figure-field:nth-child(even), .container .chess-board .fields-container .chess-row:nth-child(odd) .figure-field:nth-child(odd) {
-    background: #624a2e
-} 
-
-.container .chess-board .fields-container .chess-row:nth-child(odd) .figure-field:nth-child(even), .container .chess-board .fields-container .chess-row:nth-child(even) .figure-field:nth-child(odd) {
-    background: #ffeaa4
-}   
-
