--- a/main.scss
+++ b/main.scss
@@ -3,7 +3,6 @@ main {
 	width: 100vw;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
 	justify-content: space-evenly;
 }
@@ -50,11 +49,11 @@ main {
 					border: 4px solid #4f9d56;
 				}
 
-				&[data-color="black"] img {
+				&.black-figure img {
 					filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.5));
 				}
 
-				&[data-color="white"] img {
+				&.white-figure img {
 					filter: invert(100%) drop-shadow(0 0 4px rgba(0, 0, 0, 0.5));
 				}
 
